# SwarmPAL-test-data

./: LICENSE  README.md  config.yaml  download.sh  generate_data.py  pyproject.toml  registry.txt
config/: fixture_paldata_item_MAGA.yaml  fixture_paldata_item_MAGB.yaml  test_dsecs_basic.yaml  test_fac_singlesat_swarm.yaml  test_paldataitem_hapi.yaml  test_paldataitem_vires.yaml  test_time_pad_vires.yaml
data/: fixture_paldata_item_MAGA.nc4  fixture_paldata_item_MAGB.nc4  registry.txt  test_dsecs_basic.nc4  test_fac_singlesat_swarm.nc4  test_paldataitem_hapi.nc4  test_paldataitem_vires.nc4  test_tfa_basic.nc4  test_time_pad_hapi.nc4  test_time_pad_vires.nc4
